The view learning things

--- a/Notes/01.md
+++ b/Notes/01.md
@@ -3,5 +3,14 @@
   `Text` This is the compoment in th react native code that is used to display the text in the screen .
    Nesting of the text component is alwayas allowed .
    In react native any text on the screen need to be inside the text component.
-  ` View` This is the another layout used to create the layout and structure for the user interface. It behave live a div .
+  ` View` This is the another layout used to create the layout and structure for the user interface. It behave live a div . It is used to group and the organise the other components together .
    - Layout refers to the arrangement of the visual of the  element on a screen or in the page . It is crucial that involve the styling of the components .
+ `Textinput` is used to capture the user input .
+ ` WebView` This is used to render the web components .
+ ` Modal` This is used to present the content above the enclosing view .
+ `Layout` Flexbox is used for layout  .
+ `SectionList` It is allows grouping of the data into the section .
+ `ScrollView` It allows you to scroll through the content that overflows the screen .
+ ` 
+ `Button` These are the simple clickable component for handling user intersections .
+ 
