The login page development with the react-native

--- a/Notes/01.md
+++ b/Notes/01.md
@@ -13,4 +13,7 @@
  `ScrollView` It allows you to scroll through the content that overflows the screen .
  ` 
  `Button` These are the simple clickable component for handling user intersections .
- 
+ - Learning about the container on the screen for the making different use of the container in the same screen .
+  - Flex helps to distribute the space in the container . It helps to   create the specific size for the particular container and resize based on the available space in the parent contaienr.
+  `UseState`
+   - It is a hook in function and react native that allows you to add state the functional componets . It lets you to state variable that be updated causing the components to re render when the state change ,
