The src page have the three components which includes the basic implementation of the login and the signp and the basic to do list

--- a/Notes/01.md
+++ b/Notes/01.md
@@ -17,3 +17,6 @@
   - Flex helps to distribute the space in the container . It helps to   create the specific size for the particular container and resize based on the available space in the parent contaienr.
   `UseState`
    - It is a hook in function and react native that allows you to add state the functional componets . It lets you to state variable that be updated causing the components to re render when the state change ,
+
+- `npm install @react-navigation/native @react-navigation/stack` This is used to make sure if the navigation stack is working properly or not .
+`npm install react-native-gesture-handler react-native-reanimated react-native-screens @react-native-community/masked-view @react-navigation/stack` This is insure all the things at the one place .
