The build was sucessfull

--- a/Notes/01.md
+++ b/Notes/01.md
@@ -20,3 +20,5 @@
 
 - `npm install @react-navigation/native @react-navigation/stack` This is used to make sure if the navigation stack is working properly or not .
 `npm install react-native-gesture-handler react-native-reanimated react-native-screens @react-native-community/masked-view @react-navigation/stack` This is insure all the things at the one place .
+
+- `./gradlew clean ` For this go into the android dir and run this command this will clean the previous build and make it new release .
