--- a/Notes/02.md
+++ b/Notes/02.md
@@ -11,6 +11,6 @@
    - Photo Upload 
 - workdetails 
   -Login and sign up page done with perfect details .
-  
+  - Done with these fetures and have successfully build the apk file and tested on the other side of the phone .
 Phase 2: 
 - Once the phase one is done then we will procede here and will work on this .
